# SofaHighOrder

./: CMakeLists.txt
AdvancedFEMVerification/: AdvancedFEMVerification.cpp  CMakeLists.txt  HyperelasticCoefficientCalculator.xlsx
AdvancedFEMVerification/Maple/: BoyceArruda.mw  HyperElasticCommon.mw  MooneyRivlin.mw  MooneyRivlin2.mw  NeoHookean.mw  VerondaWestmann.mw  compressibleStVenantKirchhoff.mw  simpleShear.mw
AdvancedFEMVerification/Scenes/: HyperelasticSimpleShearTetraTestScene.xml  HyperelasticTest.scn  HyperelasticTest.scn.view  HyperelasticTestScene.scn  HyperelasticTestScene.scn.view  SimpleShearTest.xml  monitor1_x.txt
SofaHighOrderFEM/: AdaptiveBezierMeshMatrixMass.cpp  AdaptiveBezierMeshMatrixMass.h  AdaptiveBezierMeshMatrixMass.inl  AdaptiveBezierTetra2BezierTriangleMechanicalMapping.cpp  AdaptiveBezierTetra2BezierTriangleMechanicalMapping.h  AdaptiveBezierTetra2BezierTriangleMechanicalMapping.inl  AdaptiveBezierTetra2BezierTriangleTopologicalMapping.cpp  AdaptiveBezierTetra2BezierTriangleTopologicalMapping.h  AdaptiveBezierTetrahedralCorotationalFEMForceField.cpp  AdaptiveBezierTetrahedralCorotationalFEMForceField.h  AdaptiveBezierTetrahedralCorotationalFEMForceField.inl  AdaptiveBezierTetrahedronController.cpp  AdaptiveBezierTetrahedronController.h  AdaptiveBezierTetrahedronController.inl  AdaptiveBezierTetrahedronSetController.inl  AdaptiveBezierTetrahedronSetTopologyAlgorithms.cpp  AdaptiveBezierTetrahedronSetTopologyAlgorithms.h  AdaptiveBezierTetrahedronSetTopologyAlgorithms.inl  AdaptiveBezierTetrahedronSetTopologyContainer.cpp  AdaptiveBezierTetrahedronSetTopologyContainer.h  AdaptiveBezierTetrahedronSetTopologyModifier.cpp  AdaptiveBezierTetrahedronSetTopologyModifier.h  BezierTetrahedralCorotationalFEMForceField.cpp  BezierTetrahedralCorotationalFEMForceField.h  BezierTetrahedralCorotationalFEMForceField.inl  CMakeLists.txt  HighOrderMeshMatrixMass.cpp  HighOrderMeshMatrixMass.h  HighOrderMeshMatrixMass.inl  HighOrderTetrahedralCorotationalFEMForceField.cpp  HighOrderTetrahedralCorotationalFEMForceField.h  HighOrderTetrahedralCorotationalFEMForceField.inl  HighOrderTetrahedralDiffusionForceField.cpp  HighOrderTetrahedralDiffusionForceField.h  HighOrderTetrahedralDiffusionForceField.inl  HighOrderTriangularCorotationalFEMForceField.cpp  HighOrderTriangularCorotationalFEMForceField.h  HighOrderTriangularCorotationalFEMForceField.inl  HighOrderTriangularDiffusionForceField.cpp  HighOrderTriangularDiffusionForceField.h  (+5 more)
SofaHighOrderTopology/: Bezier2MeshMechanicalMapping.cpp  Bezier2MeshMechanicalMapping.h  Bezier2MeshMechanicalMapping.inl  BezierTetrahedronSetGeometryAlgorithms.cpp  BezierTetrahedronSetGeometryAlgorithms.h  BezierTetrahedronSetGeometryAlgorithms.inl  BezierTriangleCoefficients.h  BezierTriangleSetGeometryAlgorithms.cpp  BezierTriangleSetGeometryAlgorithms.h  BezierTriangleSetGeometryAlgorithms.inl  CMakeLists.txt  GenerateBezierCylinder.cpp  GenerateBezierCylinder.h  GenerateBezierCylinder.inl  GenerateBezierSphere.cpp  GenerateBezierSphere.h  GenerateBezierSphere.inl  HOMFFileExporter.cpp  HOMFFileExporter.h  HOMFFileExporter.inl  HighOrder2MeshTopologicalMapping.cpp  HighOrder2MeshTopologicalMapping.h  HighOrderTetra2HighOrderTriangleTopologicalMapping.cpp  HighOrderTetra2HighOrderTriangleTopologicalMapping.h  HighOrderTetrahedronSetGeometryAlgorithms.h  HighOrderTetrahedronSetGeometryAlgorithms.inl  HighOrderTetrahedronSetTopologyContainer.cpp  HighOrderTetrahedronSetTopologyContainer.h  HighOrderTopologyIndex.h  HighOrderTriangleSetGeometryAlgorithms.h  HighOrderTriangleSetGeometryAlgorithms.inl  HighOrderTriangleSetTopologyContainer.cpp  HighOrderTriangleSetTopologyContainer.h  LagrangeTetrahedronSetGeometryAlgorithms.cpp  LagrangeTetrahedronSetGeometryAlgorithms.h  LagrangeTetrahedronSetGeometryAlgorithms.inl  LagrangeTriangleCoefficients.h  LagrangeTriangleSetGeometryAlgorithms.cpp  LagrangeTriangleSetGeometryAlgorithms.h  LagrangeTriangleSetGeometryAlgorithms.inl  (+8 more)
SofaHighOrderTopology/SofaHighOrderTopology_test/: BezierTetrahedronTopology_test.cpp  CMakeLists.txt
SofaHighOrderTopology_test/: BezierTetrahedronTopology_test.cpp
doc/: macros_docu.tex
doc/HighOrderTopology/: HOM-FileFormat.tex  HOMFormat.pptx  HighOrderElements.tex  exampleHOM.odg
doc/PureTractionTest/: CurveCSVK.eps  CurveLinearElasticity.eps  CurveMR.eps  CurveNH.eps  CurveSVK.eps  PureTraction.odg  PureTractionTest.tex  StressSVK.eps
doc/StVenantKirchhoffForceField/: StVenantKirchhoffForceField.tex
examples/: Bezier2MeshMechanicalMapping.scn  BezierTetrahedronCorotationalFEMForceField.scn  BezierTetrahedronCorotationalFEMForceField.scn.qglviewer.view  BezierTetrahedron_ComparisonWithFlexible.scn  GenerateSphere3.scn  HexahedronCorotationalForceField.scn  HexahedronCorotationalForceField.scn.view  HexahedronCorotationalForceField_ComparisonWithHexahedronFEMForceField.scn  HexahedronCorotationalForceField_ComparisonWithHexahedronFEMForceFieldNonAffine.scn  HexahedronCorotationalForceField_Dynamic.scn  HexahedronCorotationalForceField_Dynamic.scn.view  HexahedronCorotationalForceField_DynamicLarge.scn  HexahedronCorotationalForceField_NonAffine.scn  HexahedronCorotationalForceField_NonAffine.scn.view
examples/HighOrderFEM/: CylinderTetraDeg3.hom  HighOrderTetrahedralCorotationalFEMForceField.xml  HighOrderTetrahedralDiffusionForceField.xml  HighOrderTriangularCorotationalFEMForceField-TwoTriangles.xml  HighOrderTriangularCorotationalFEMForceField.xml  TestDiffusion2D.xml  TestDiffusionHighOrder2D.xml  gridTrianglesDeg4_0.hom
examples/HighOrderTopology/: Bezier2MeshMechanicalMapping.scn  BezierTetrahedronSetTopologyContainer.scn  BezierTriangleSetTopologyContainer.scn  GenerateCylinder.xml  GenerateSphere.xml  Mesh2BezierTopologicalMapping.scn  TestLoaderHOMFFile2D.xml  TestLoaderHOMFFile3D.xml  TestLoaderHighOrder2D.xml  TestLoaderHighOrder3D.xml
examples/TetrahedronAssemblyBenchmark/: AssemblyTestCylinderTetrahedra.xml  AssemblyTestOneTetrahedron.xml  AssemblyTestOneTetrahedronDiffusion.xml  AssemblyTestOneTriangle.xml  BenchmarkAssembly.xlsm  (+20 more)
(+171 files in other folders)
